--- a/Style.css
+++ b/Style.css
@@ -5,7 +5,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: visible;
     background-color: #333;
 
 }
@@ -33,6 +33,7 @@ li {
   text-align: center;
 }
 #youtube {
+  border-radius: 15px;
   background-color: #f44336;
 color: white;
 padding: 14px 25px;
@@ -41,6 +42,7 @@ text-decoration: none;
 display: inline-block;
 }
 #steam {
+  border-radius: 15px;
   background-color: #8B8787;
   color: white;
   padding: 14px 25px;
@@ -48,7 +50,8 @@ display: inline-block;
   text-decoration: none;
   display: inline-block;
 }
-#twitch {
+#twitch_button {
+  border-radius: 15px;
   background-color: #BC00FF;
   color: white;
   padding: 14px 25px;
@@ -89,7 +92,7 @@ body{
   background-size: cover;
   background-position: center;
   background-position: bottom;
-  
+
 
 
 }
