--- a/Style.css
+++ b/Style.css
@@ -88,10 +88,10 @@ ul {
 }
 body{
   background-image: url(white.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-position: bottom;
+  /background-repeat: no-repeat;
+  /background-size: cover;
+  /background-position: center;
+  /background-position: bottom;
 
 
 
