--- a/Style2.css
+++ b/Style2.css
@@ -72,3 +72,66 @@
   background-color: white;
   border: 1px solid black;
 }
+#svenska{
+  position: relative;
+  display: inline-block;
+}
+#svenska-text{
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+#svenska:hover #svenska-text{
+  display: block;
+}
+#engelska-lang{
+  position: relative;
+  display: inline-block;
+}
+#engelska-text{
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+#engelska-lang:hover #engelska-text{
+  display: block;
+}
+#tyska{
+  position: relative;
+  display: inline-block;
+}
+#tyska-text{
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+#tyska:hover #tyska-text{
+  display: block;
+}
+#svenska-flag{
+  position: relative;
+  width: 300px;
+  height: 150px;
+}
+#engelska-bild{
+  position: relative;
+  width: 300px;
+  height: 150px;
+}
+#tyska-bild{
+  position: relative;
+  width: 300px;
+  height: 150px;
+}
