--- a/css/Style.css
+++ b/css/Style.css
@@ -67,12 +67,9 @@ li a:hover:not(.active) {
 .active {
     background-color: #f48042;
 }
-#praktik{
-  text-align: center;
-}
-body{
-  background-image: url(../pictures/white.jpg); 
 
+body{
+  background-image: url(../pictures/white.jpg);
 }
 #engelska{
   text-align: center;
@@ -103,6 +100,7 @@ body{
   left: 0;
   right: 0;
   margin: 0;
+  margin-bottom: 20px;
   padding: 0;
   overflow: hidden;
   background-color: #333;
@@ -132,54 +130,6 @@ body{
     width: 100%;
     height: auto;
   }
-#bergs{
-  position: relative;
-  display: inline-block;
-}
-#bergs-text{
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
-  z-index: 1;
-}
-#bergs:hover #bergs-text{
-  display: block;
-}
-#ica{
-  position: relative;
-  display: inline-block;
-}
-#ica-text{
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
-  z-index: 1;
-}
-#ica:hover #ica-text{
-  display: block;
-}
-#eltel{
-  position: relative;
-  display: inline-block;
-}
-#eltel-text{
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
-  z-index: 1;
-}
-#eltel:hover #eltel-text{
-  display: block;
-}
 #site-version{
   border-radius: 15px;
   margin: auto;
