pre footer aded v2.0

--- a/css/Style.css
+++ b/css/Style.css
@@ -1,3 +1,7 @@
+footer{
+  display: block;
+  background-color: red;
+}
 body{
   background-image: url(../pictures/white.jpg);
   font-family: sans-serif;
