--- a/css/Style.css
+++ b/css/Style.css
@@ -5,7 +5,7 @@ footer{
   height: 25px;
 }
 body{
-  background-image: url(../pictures/fade2.png);
+  background-image: url(../pictures/blue-crystal.jpg);
   font-family: sans-serif;
 }
 .animation-index{
