--- a/css/Style3.css
+++ b/css/Style3.css
@@ -6,3 +6,15 @@
   background-color: yellow;
   border: 1px solid black;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
