added picture tab. v2.5

--- a/css/Style2.css
+++ b/css/Style2.css
@@ -67,12 +67,11 @@
 margin-left: auto;
 }
 #datumet{
-  border-radius: 15px;
   text-align: center;
   width: 480px;
   height: 20px;
-  background-color: yellow;
-  border: 1px solid black;
+  background-color: white;
+  border: 1px solid red;
 }
 #start-btn{
   position: relative;
