--- a/css/Style3.css
+++ b/css/Style3.css
@@ -1,10 +1,9 @@
 #random-numb{
-  border-radius: 15px;
   text-align: center;
   width: 30px;
   height: 20px;
-  background-color: yellow;
-  border: 1px solid black;
+  background-color: white;
+  border: 1px solid red;
 }
 ::-webkit-scrollbar {
   width: 10px;
