--- a/css/pictures.css
+++ b/css/pictures.css
@@ -1,26 +1,32 @@
-.picture {
-  background-image: url(../pictures/sunset.jpg);
-  height: 100%;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+body{
+  background-image: url(../pictures/white.jpg);
+}
+#mepic{
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  border: 2px;
+  border-top-style: solid;
+  border-bottom-style: solid;
+  font-size: 50px;
+  width: 500px;
+}
+.image-text {
+  position: relative;
   text-align: center;
-  margin: 0 auto;
 }
-.picture2 {
-  background-image: url(../pictures/berg.jpg);
-  height: 100%;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.picture3 {
-  background-image: url(../pictures/water.jpg);
-  height: 100%;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.image-middle{
+  position: relative;
+  width: 30%;
+  margin-top: 20px;
+  left: 20%;
+  transform: translate(-50%);
 }
