added kys tutorial. just for fun okey??

--- a/css/Style3.css
+++ b/css/Style3.css
@@ -40,3 +40,11 @@
   width: 100%;
   padding: 20px;
 }
+#jstext{
+  margin: auto;
+  text-align: center;
+  width: 1500px;
+  height: 20px;
+  background-color: white;
+  border: 1px solid red;
+}
